--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -43,5 +43,5 @@
 
     <div id="content">
 
-      <%- include('hs', { items, listing }) %>
+      <%- include('partials/hs', { items, listing }) %>
     </div>
