MBA-103-explore-banner-picture-fix

--- a/src/views/explore.ejs
+++ b/src/views/explore.ejs
@@ -1,10 +1,10 @@
 <% layout('layout') %>
 
 <div class="explore_top">
-  <img src="https://picsum.photos/600/400" alt="Explore image">
-  <p class="p_name"><%= items.title %></p>
-  <p class="p_description"><%= items.description %></p>
-  <a href="/explore">View</a>
+  <img src="/images/tennis.jpg" alt="Explore image">
+  <p class="p_name">Tennis Racket + Ball</p>
+  <p class="p_description">2 rackets + 3 tennis balls + bag. Can be sold separately. Rarely used</p>
+  <a href="#">View</a>
   <!-- <button id="explore_view">View</button> -->
 </div>
 
