--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1258,6 +1258,13 @@ video {
   width: 80%;
 }
 
+.item-status.sale {
+  color: green;
+}
+.item-status.rent {
+  color: orange;
+}
+
 /* 11. Reviews =================== */
 .listings .section-header a {
   color: black;
