--- a/src/views/messages/index.ejs
+++ b/src/views/messages/index.ejs
@@ -11,7 +11,7 @@
   <div class="messages-page">
 
     <div class="messages-header">
-      <a href="/profile" class="back-btn">
+      <a href="/" class="back-btn">
         <i class="fa-solid fa-arrow-left"></i>
       </a>
       <h2>Messages</h2>
