--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,7 +141,6 @@ video {
 /* 5. Footer ====================== */
 .footer {
   background-color: #556C40;
-  padding: 0.5rem 0;
   position: sticky;
   width: 100%;
   bottom: 0;
@@ -157,6 +156,33 @@ video {
   position: relative;
 }
 
+.footer_box {
+  position: relative;
+  height: 4.3rem;
+}
+
+.olive {
+  width: 3rem;
+  height: 0.2rem;
+  background-color: #556C40;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+}
+
+.white {
+  width: 3rem;
+  height: 0.2rem;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+}
+
+.footer_icon {
+  padding-top: 0.7rem;
+}
+
 .footer-link {
   flex: 1;
   text-align: center;
@@ -164,11 +190,13 @@ video {
   text-decoration: none;
   font-family: "Helvetica Neue", sans-serif;
   font-size: 0.7rem;
+  margin-bottom: 1rem;
 }
-.footer-link i {
+.footer-link .icon {
   display: block;
   font-size: 1.6rem;
-  margin-bottom: 0.1rem;
+  margin-top: 0.7rem;
+  margin-bottom: 0.2rem;
   line-height: 1;
 }
 
