--- a/src/sass/base/_footer.scss
+++ b/src/sass/base/_footer.scss
@@ -1,21 +1,49 @@
 .footer {
     background-color: $color-primary;
-    padding: 0.5rem 0;
+    // padding: 1.2rem 0 1rem 0;
     position: sticky;
     width: 100%;
     bottom: 0;
     box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.2);
     z-index: 1000;
 }
-  
+
 .nav-footer {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
     position: relative;
+    // margin: 1.2rem 0 1rem 0;
 }
-  
+
+.footer_box {
+    position: relative;
+    height: 4.3rem;
+}
+
+.olive {
+    width: 3rem;
+    height: .2rem;
+    background-color: $color-primary;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
+}
+
+.white {
+    width: 3rem;
+    height: .2rem;
+    background-color: $color-white;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
+}
+
+.footer_icon {
+    padding-top: .7rem;
+}
+
 .footer-link {
     flex: 1;
     text-align: center;
@@ -23,11 +51,14 @@
     text-decoration: none;
     font-family: $font-body;
     font-size: 0.7rem;
+    margin-bottom: 1rem;
+    // padding-top: .7rem;
 
-    i {
+    .icon {
         display: block;
         font-size: 1.6rem;
-        margin-bottom: 0.1rem; 
+        margin-top: .7rem;
+        margin-bottom: .2rem;
         line-height: 1;
     }
 
@@ -52,4 +83,3 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
     text-decoration: none;
 }
-  
