--- a/src/views/listings/show.ejs
+++ b/src/views/listings/show.ejs
@@ -76,10 +76,10 @@
 
       <div class="action-buttons">
         <button class="add-to-cart-button" id="addToCartBtn">
-          <i class="fa fa-cart-plus"></i> Add to Cart
+          <i class="fa fa-cart-plus"></i>
         </button>
         <button class="heart-button like-btn" data-id="<%= listing.id %>">
-          <i class="fa fa-heart"></i> Like
+          <i class="fa fa-heart"></i>
         </button>
       </div>
       
