--- a/src/views/notifications/notifications.ejs
+++ b/src/views/notifications/notifications.ejs
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <title>Notifications</title>
   <link rel="stylesheet" href="/css/style.css">
+  <script src="https://kit.fontawesome.com/380ad8a69c.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
   <div class="top-bar">
-    <a href="/" class="back">←</a>
+    <a href="/" class="back">
+      <span class="fa back-arrow">&#8592;</span>
+    </a>
     <h1>Notifications</h1>
   </div>
 
