MBA-147-bug-explore-main-product-view-link-is-not-linked

--- a/src/views/explore.ejs
+++ b/src/views/explore.ejs
@@ -4,8 +4,7 @@
   <img src="/images/tennis.jpg" alt="Explore image">
   <p class="p_name">Tennis Racket + Ball</p>
   <p class="p_description">2 rackets + 3 tennis balls + bag. Can be sold separately. Rarely used</p>
-  <a href="#">View</a>
-  <!-- <button id="explore_view">View</button> -->
+  <a href="/listings/my/682d074cb7eaaa11859e6fab">View</a>
 </div>
 
 <%- include('home_category', { content: "buying", listing, listing2 }) %>
