--- a/public/css/style.css
+++ b/public/css/style.css
@@ -323,6 +323,7 @@ video {
   border-radius: 100%;
   width: 100px;
   height: 100px;
+  object-fit: cover;
   border: 1px solid black;
 }
 .profile-header .edit-icon {
